fixed stretched images on safari

--- a/sass/pages/_project.scss
+++ b/sass/pages/_project.scss
@@ -11,7 +11,7 @@
 
 			@media screen and (max-width: 1200px) {
 				max-width: 100vw;
-				height: inherit;
+				height: 100%;
 			}
 		}
 		
